--- a/MoviePy入门/混合剪辑.md
+++ b/MoviePy入门/混合剪辑.md
@@ -39,3 +39,66 @@ final_clip.resize(width=480).write_videofile("my_stack.mp4")
 ```python
 video = CompositeVideoClip([clip1,clip2,clip3])
 ```
+当前`video`播放`clip1`，`clip2`在`clip1`的上层，而`clip3`在`clip1`和`clip2`的上层。举例来说，如果`clip2`与`clip3`和`clip1`有同样的尺寸，那么只有在顶层的`clip3`能在视频中可见，除非`clip3`和`clip2`被遮罩隐藏了一部分。注意，在默认情况下，合成的视频和第一个剪辑的尺寸相同（因为它通常是一个背景）。但是有时，你想让你的剪辑在更大的合成视频里*浮动*，所以你需要像这样特意修改最终合成视频的尺寸：
+```python
+video = CompositeVideoClip([clip1,clip2,clip3], size=(720,460))
+```
+
+### 起始和终止时间
+在一个合成剪辑中，所有的剪辑开始的时间都被`clip.start`属性所指定。你可以像这样设定开始时间：
+```python
+clip1 = clip1.set_start(5) # start after 5 seconds
+```
+例如你的剪辑看起来会是这样：
+```python
+video = CompositeVideoClip([clip1, # starts at t=0
+                            clip2.set_start(5), # start at t=5s
+                            clip3.set_start(9)]) # start at t=9s
+```
+在上面的例子中，`clip2`可能先于`clip1`的结束时间开始。在这种情况下，你可以给`clip2`添加一个1秒钟的淡入效果：
+```python
+video = CompositeVideoClip([clip1, # starts at t=0
+                            clip2.set_start(5).crossfadein(1),
+                            clip3.set_start(9).crossfadein(1.5)])
+```
+
+### 剪辑的定位
+如果`clip2`和`clip3`都比`clip1`小，你可以决定他们出现在视频中的位置。在这里，我们指定了剪辑左上角像素的坐标：
+```python
+video = CompositeVideoClip([clip1,
+                           clip2.set_pos((45,150)),
+                           clip3.set_pos((90,100))])
+```
+有很多方法可以指定位置：
+```python
+clip2.set_pos((45,150)) # x=45, y=150 , in pixels
+
+clip2.set_pos("center") # automatically centered
+
+# clip2 is horizontally centered, and at the top of the picture
+clip2.set_pos(("center","top"))
+
+# clip2 is vertically centered, at the left of the picture
+clip2.set_pos(("left","center"))
+
+# clip2 is at 40% of the width, 70% of the height of the screen:
+clip2.set_pos((0.4,0.7), relative=True)
+
+# clip2's position is horizontally centered, and moving down !
+clip2.set_pos(lambda t: ('center', 50+t) )
+```
+当指定坐标的时候请记住，`y`坐标的0位置在图片的最上方：
+
+![](http://zulko.github.io/moviepy/_images/videoWH.jpeg)
+
+### 合成音频剪辑
+当你将视频剪辑混合在一起时，MoviePy将会把它们各自的音轨自动合成为最终剪辑的音轨，所以不用担心需要自行合成音轨啦。
+如果你想使用许多音频源来自定义音轨，可以使用`CompositeAudioClip`和`concatenate_audioclips`来进行混音。
+```python
+from moviepy.editor import *
+# ... make some audio clips aclip1, aclip2, aclip3
+concat = concatenate_audioclips([aclip1, aclip2, aclip3])
+compo = CompositeAudioClip([aclip1.volumex(1.2),
+                            aclip2.set_start(5), # start at t=5s
+                            aclip3.set_start(9)])
+```
