--- a/脚本示例/移动的字母.md
+++ b/脚本示例/移动的字母.md
@@ -1,7 +1,10 @@
 ## 移动的字母
+
+*原文链接：http://zulko.github.io/moviepy/examples/moving_letters.html*
+
 我认为这个例子很好地展示了基于脚本编辑的有趣之处（想象是手动实现它的）。
 
-https://www.youtube.com/embed/sZMyzzGlsc0
+视频地址：https://youtu.be/jj5qrHl5ZS0
 
 代码如下：
 ```python
