--- a/MoviePy入门/视频剪辑与效果.md
+++ b/MoviePy入门/视频剪辑与效果.md
@@ -13,3 +13,9 @@ my_clip = VideoFileClip("some_file.mp4")
 my_clip.set_start(t=5) # does nothing, changes are lost
 my_new_clip = my_clip.set_start(t=5) # good !
 ```
+
+并且，当你使用`clip.resize(width=640)`，它不会立刻讲效果运用到剪辑片段的所有帧上，而是仅仅在第一帧使用这个效果。所有的帧只有当被要求时才会重新缩放大小（也就是说，当你想把整个剪辑片段写入一个文件时，你将会预览它）或者换种说法，当你创建一个剪辑片段时不需要时间也不需要内存，所有的运算只会在最后的渲染时进行。
+
+## Moviepy中时间的表示
+
+我们会看到许多方法当中将时间作为参数，例如`clip.subclip(t_start,t_end)`，这个将两个时间内的剪辑片段进行剪辑的方法。对于这些方法，时间可以以秒(`t_start=230.54`)，分秒（`t_start=(3,50.54)`），时分秒（`t_start=(0,3,50.54)`），或者字符串（`t_start='00:03:50.54')`）的形式表示。
