--- a/MoviePy入门/视频剪辑与效果.md
+++ b/MoviePy入门/视频剪辑与效果.md
@@ -19,3 +19,44 @@ my_new_clip = my_clip.set_start(t=5) # good !
 ## Moviepy中时间的表示
 
 我们会看到许多方法当中将时间作为参数，例如`clip.subclip(t_start,t_end)`，这个将两个时间内的剪辑片段进行剪辑的方法。对于这些方法，时间可以以秒(`t_start=230.54`)，分秒（`t_start=(3,50.54)`），时分秒（`t_start=(0,3,50.54)`），或者字符串（`t_start='00:03:50.54')`）的形式表示。
+
+许多时候如果没有告诉一个方法具体的时间参数，这个方法会猜测你希望使用的时间参数，比如在`clip.subclip(t_start=50)`中会把`t_end`当作视频结束的时间进行处理，在`clip.subclip(t_end=20)`中`t_start=0`。
+如果时间参数是负的，则会当作离视频结束的时间进行处理，例如在`clip.subclip(-20, -10)`中则会对视频结束前20秒和视频结束前10秒进行剪辑。
+
+## 改变视频属性的方法
+
+## clip.fx
+
+加入你用某些函数在视频上添加了效果，也就是说，这个函数需要某些参数和一个视频片段，并且生成一个新的视频片段：
+
+```python
+effect_1(clip, args1) -> new clip
+effect_2(clip, args2) -> new clip
+effect_3(clip, args3) -> new clip
+```
+
+将and/or作为`args`的关键字。当应用这些函数时，按照一定的顺序，去生成一个剪辑，你该像下面这样写：
+
+```python
+newclip =  effect_3( effect_2( effect_1(clip, args3), args2), args1)
+```
+
+但是这样写并不具有良好的可读性。如果你想要一个更佳清晰的语法你可以使用`clip.fx`：
+
+```python
+newclip = (clip.fx( effect_1, args1)
+               .fx( effect_2, args2)
+               .fx( effect_3, args3))
+```
+
+变得更佳清晰了！在`moviepy.video.fx`和`moviepy.audio.fx`模块当中，早已经有了许多效果的应用。这些模块当中的的fx方法会自动应用在与剪辑有关的声音以及遮照当中，这样你就不用担心去修改这些了。你也可以使用`from moviepy import.editor *`来将这两个模块作为`vfx`和`afx`进行导入，这样你就可以使用如下写法：
+
+```python
+from moviepy.editor import *
+clip = (VideoFileClip("myvideo.avi")
+        .fx( vfx.resize, width=460) # resize (keep aspect ratio)
+        .fx( vfx.speedx, 2) # double the speed
+        .fx( vfx.colorx, 0.5)) # darken the picture
+```
+
+方便起见，当你使用`moviepy.editor`时，频繁使用的方法例如`resize`可以写成一个更简单的形式：`clip.resize(...)`而不是`clip.fx( vfx.resize, ...)`。
