--- a/脚本示例/视频中的重复字符.md
+++ b/脚本示例/视频中的重复字符.md
@@ -1,1 +1,10 @@
-{\rtf1}
+## 部分隐藏的演职人员表
+
+*原文链接：
+http://zulko.github.io/moviepy/examples/several_characters.html*
+
+</br>
+</br>
+
+视频地址：https://youtu.be/sZMyzzGlsc0
+
