--- a/2_MoviePy入门/视频剪辑与效果.md
+++ b/2_MoviePy入门/视频剪辑与效果.md
@@ -60,3 +60,46 @@ clip = (VideoFileClip("myvideo.avi")
 ```
 
 方便起见，当你使用`moviepy.editor`时，频繁使用的方法例如`resize`可以写成一个更简单的形式：`clip.resize(...)`而不是`clip.fx( vfx.resize, ...)`。
+
+## 创建自定义效果的方法
+
+## clip.fl
+
+你可以通过`clip.fl_time`,`clip.fl_image`和更多`clip.fl`中的方法创建一个自定义滤镜来修改一个视频片段。
+
+你可以通过`clip.fl_time`改变时间轴，例如：
+
+```python
+modifiedClip1 = my_clip.fl_time(lambda t: 3*t)
+modifiedClip2 = my_clip.fl_time(lambda t: 1+sin(t))
+```
+
+此时片段`modifiedClip1`与`my_clip`拥有同样的效果，只是变成了三倍速播放。`modifiedClip2`将会在t=0s和t=2s之间震荡播放`my_clip`。需要注意的是在上一个例子当中你需要创建一个拥有无限时间轴的视频剪辑（现在应该已经不是什么大问题了）。
+
+你也可以通过`clip.fl_image`来修改视频片段。下面的例子展示了将视频每一帧的蓝色通道与绿色通道倒置的效果：
+
+```python
+def invert_green_blue(image):
+    return image[:,:,[0,2,1]]
+
+modifiedClip = my_clip.fl_image( invert_green_blue )
+```
+
+最后，你可能需要处理一个同时需要考虑时间轴以及帧处理的视频片段，你可以使用`clip.fl(filter)`方法来完成。这个滤镜函数能够输入两个参数并且返回一个画面。第一个参数是一个`get_frame`方法（一个`g(t)`方法，通过给定一个时间返回一个固定的帧），第二个参数是时间。
+
+```python
+def scroll(get_frame, t):
+    """
+    This function returns a 'region' of the current frame.
+    The position of this region depends on the time.
+    """
+    frame = get_frame(t)
+    frame_region = frame[int(t):int(t)+360,:]
+    return frame_region
+
+modifiedClip = my_clip.fl( scroll )
+```
+
+这个例子能够实现视频往下滚360个像素的效果。
+
+当对一个新的效果进行编程时，尽可能使用`fl_time`和`fl_image`而不是`fl`来使用新的效果。因为在对一个图片剪辑使用这些效果时，MoviePy会认出这些方法不需要被应用在每一帧，以此来加快渲染速度。
