--- a/9_参考手册/视频剪辑的类型.md
+++ b/9_参考手册/视频剪辑的类型.md
@@ -11,5 +11,27 @@ class moviepy.video.VideoClip.VideoClip(make_frame=None,ismask=False,duration=No
 
 参数：**ismask** 如果剪辑为遮罩，则值为True
 
-#### 属性
 
+|属性|描述|
+|-|-|
+|size|剪辑的尺寸，(宽,高)，以像素为单位|
+|w,h|剪辑的宽(width)和高(height)，以像素为单位|
+|ismask|布尔型，如果剪辑为遮罩，则设值为*True*|
+|make_frame|`t→时间t时的帧`，其中`帧`为一个w*h*3的RGB数组|
+|mask(默认*None*)|这个剪辑附带的视频剪辑遮罩。如果参数为`None`，则视频剪辑为完全不透明的|
+|audio(默认*None*)|一个包含视频剪辑里的音频的音频剪辑实例|
+|pos|`t→(x,y)`，其中`x,y`指当与其他剪辑合成时，该剪辑的位置。详见`VideoClip.set_pos`|
+|relative_pos|见`pos`变量|
+
+> add_mask()
+
+    给视频剪辑添加一个遮罩。
+
+    返回一个带有完全不透明的遮罩的剪辑副本。这使得计算速度低于不带有遮罩的条件，但在很多情况下很有用。
+
+    当剪辑带有非定值尺寸的图片时，将`constant_size`的值设置为*False*。
+
+> afx(*fun,\*a,\*\*k*)
+
+变换剪辑的音频。
+返回一个音频由`fun`变换的新剪辑。
