--- a/9_参考手册/视频剪辑的类型.md
+++ b/9_参考手册/视频剪辑的类型.md
@@ -38,3 +38,9 @@ class moviepy.video.VideoClip.VideoClip(make_frame=None,ismask=False,duration=No
 
 > blit_on(*picture,t*)
 
+返回在给定的图片上的剪辑在时间t的帧区块传送的结果，剪辑的位置由剪辑的`pos`属性决定。为合成而设。
+
+> copy()
+
+
+
